--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <input type="text">
     <button>Check</button>
     <p>The number is greater</p>
+
+    <footer class="footer">
+        <a href="https://www.linkedin.com/in/cecilia-r-127779246/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+        <a href="https://github.com/CeciliaRava1" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <p class="p_element">All rights reserved &copy; 2024</p>
+    </footer>
     
 </body>
 </html>
