feat: Modify body of the project

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 <body>
 
     <div class="title">Guess the number</div>
-    <p>Type a number between 1 and 100.</p>
-    <input type="text">
-    <button>Check</button>
+    <p class="task">Type a number between 1 and 100.</p>
+    <input type="number">
+    <br>
     <p>The number is greater</p>
+    <button>Check</button>
+
 
     <footer class="footer">
         <a href="https://www.linkedin.com/in/cecilia-r-127779246/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
