--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     <div class="title">Guess the number</div>
     <p class="task">Type a number between 1 and 100.</p>
-    <input type="number">
+    <input type="number" id="number-input" value="2">
     <br>
-    <p>The number is greater</p>
-    <button>Check</button>
+    <button onclick="guessTheNumber()">Check</button> 
+    <p id="user-message"></p>
 
 
     <footer class="footer">
@@ -28,5 +28,6 @@
         <p class="p_element">All rights reserved &copy; 2024</p>
     </footer>
     
+    <script src="script.js"></script>
 </body>
 </html>
