feat: Create the logic to show messages to the user in screen - If player's input number is = number to guess, print 'You win! - If player's input number is less than number to guess, print 'Is less' - Else print 'is greater'

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <div class="title">Guess the number</div>
     <p class="task">Type a number between 1 and 100.</p>
+    <p id="number"></p>
     <input type="number" id="number-input" value="2">
     <br>
     <button onclick="guessTheNumber()">Check</button> 
