feat: Add amount of tries

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <div class="title">Guess the number</div>
     <p class="task">Type a number between 1 and 100.</p>
     <p id="number"></p>
-    <input type="number" id="number-input" value="2">
+    <input type="number" id="number-input">
     <br>
-    <button onclick="guessTheNumber()">Check</button> 
+    <button onclick="guessTheNumber()" id="check-button">Check</button> 
     <p id="user-message"></p>
+    <p id="amount-of-tries">Amount of tries</p>
+    <p id="tri"></p>
 
 
     <footer class="footer">
